[package]
name = "masquerade-designer"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "masquerade"
path = "src/main.rs"

[dependencies]
masquerade = { path = "../masquerade" }
clap = { version = "4.5.23", features = ["derive"] }
duct = "0.13.7"                                      # mv for process control

[lints.rust]
nonstandard-style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2018_compatibility = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }
warnings = { level = "warn", priority = -1 }

# individual lints that are not included in any group
dead_code = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unsafe_code = "forbid"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unused_must_use = "deny"

[lints.clippy]
# Lint groups are set to warn so new lints are used as they become available
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }


# We also check for the following individual clippy lints
panic = "deny"
unwrap_used = "deny"
expect_used = "warn"
multiple-crate-versions = "allow"
wildcard_dependencies = "forbid"
wildcard_imports = "deny"
